DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Apr-14-2006 aronb       Added GlExtensionLoader classes.
                        Added support for NV swap_group.
Oct-18-2005 patrickh    Added the functions vrj::getVersionString() and
                        vrj::getVersionNumber().

[2.0.1 released - 8.29.2005]===================================================
Aug-29-2005 patrickh    NEW VERSION: 2.0.1
Jul-25-2005 patrickh    Added vrj::Projection::getNearFar().
Jul-20-2005 patrickh    Do not call pfExit() in vrj::PfDrawManager::closeAPI().
                        Leave that up to application programmers to put at the
                        end of their main() function instead.

[2.0.0 released - 7.5.2005]====================================================
Jul-07-2005 patrickh    NEW VERSION: 2.0.0
Jun-27-2005 aronb       Ensure that we close each OpenGL window and its
                        associated context.
Jun-24-2005 patrickh    Use osg::ref_ptr<osgUtil::SceneView> in vrj::OsgApp.
Jun-15-2005 patrickh    Updated to support Windows 64-bit edition.
                        NEW VERSION: 1.1.173

[2.0 Beta 3 released - 6.7.2005]===============================================
Jun-07-2005 patrickh    NEW VERSION: 1.1.172
May-19-2005 aronb       Fixed a bug where the Draw Manager could direct an
                        application object to render after the kernel told the
                        application object that it was being closed.  This
                        fixes a general problem with OpenSG-based applications
                        crashing when exited through the kernel.
                        NEW VERSION: 1.1.171
May-11-2005 allenb      Updated OpenSG app to protect GL state with push/pop
                        attrib.
                        Added normals to the default sim wand drawing code.
Apr-18-2005 allenb      Use default value for kernel parameter to app object